[package]
name = "claude-git"
version = "0.2.0"
edition = "2024"
description = "AI-powered git helpers using Claude"
license = "MIT"
repository = "https://github.com/lucasnevespereira/claude-git"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
toml = "0.8"
dirs = "6"
